# python-ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  artifacthub-repo.yml  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  claude-ci-fix.yaml  claude-implement.yaml  claude-pr-review.yaml  e2e-ollama.yaml  helm-ci.yaml  helm-release.yaml  integration.yaml  pypi-release.yaml  security.yaml
charts/: kind-config.yaml
charts-tests/: kind-config-test.yaml
charts-tests/chainsaw/core-install/: chainsaw-test.yaml
charts-tests/chainsaw/gateway-routing/: chainsaw-test.yaml
charts-tests/chainsaw/redis-seed/: chainsaw-test.yaml
charts-tests/chainsaw/template-validation/: chainsaw-test.yaml  full-template.yaml
charts/catalyst-agents/: Chart.yaml  LICENSE  README.md  values.yaml
charts/catalyst-agents/crds/: httpendpoint-crd.yaml
charts/catalyst-agents/templates/: _helpers.tpl  catalyst-project.yaml  configmap-registry.yaml  monitoring-servicemonitor.yaml
charts/catalyst-agents/templates/chaos-mesh-crds/: job.yaml
charts/catalyst-agents/templates/components/: agent-memory.yaml  agent-pubsub.yaml  agent-registry.yaml  agent-runtime.yaml  agent-workflow.yaml  conversation.yaml  http-binding.yaml  http-endpoint-mcp.yaml  lock.yaml  pubsub.yaml  secrets.yaml  statestore.yaml
charts/catalyst-agents/templates/deployments/: diagrid-dashboard.yaml  gateway.yaml  redis.yaml  redisinsight.yaml  sentry-oidc-service.yaml
charts/catalyst-agents/templates/jobs/: redis-seed.yaml
charts/catalyst-agents/templates/secrets/: app-secrets.yaml  crypto-keys.yaml  kagent-openai-secret.yaml  llm-secret.yaml
diagrid/: __init__.py
diagrid/agent/: __init__.py
diagrid/agent/adk/: README.md  README.rst  __init__.py  models.py  plugin.py  runner.py  state.py  workflow.py
diagrid/agent/adk/examples/: README.md  pyproject.toml  requirements.txt  simple_agent.py  test_crash_recovery.py  test_retry.py
diagrid/agent/core/: __init__.py  discovery.py  observability.py  pyproject.toml  telemetry.py
diagrid/agent/core/chat/: __init__.py  client.py  langchain_model.py  types.py
diagrid/agent/core/diagrid/agent/core/metadata/: metadata.py
diagrid/agent/core/diagrid/agent/core/metadata/mapping/: strands.py
diagrid/agent/core/diagrid/agent/core/scripts/: generate_schema.py
diagrid/agent/core/diagrid/agent/core/types/: __init__.py
diagrid/agent/core/metadata/: __init__.py  introspection.py  metadata.py  mixins.py
diagrid/agent/core/metadata/mapping/: __init__.py  adk.py  base.py  crewai.py  langgraph.py  openai.py  pydantic_ai.py  strands.py
diagrid/agent/core/pubsub/: __init__.py  pubsub.py
diagrid/agent/core/scripts/: generate_schema.py
diagrid/agent/core/state/: __init__.py  store.py
diagrid/agent/core/types/: __init__.py  type.py
diagrid/agent/core/workflow/: __init__.py  naming.py  runner.py
diagrid/agent/crewai/: README.md  README.rst  __init__.py  dapr_llm.py  models.py  runner.py  state.py  workflow.py
diagrid/agent/deepagents/: __init__.py  runner.py
diagrid/agent/langgraph/: README.md  README.rst  __init__.py  models.py  pyproject.toml  runner.py  state.py  version.py  workflow.py
diagrid/agent/langgraph/examples/: README.md  conditional_graph.py  pyproject.toml  react_agent.py  requirements.txt  simple_graph.py  test_crash_recovery.py  test_retry.py
diagrid/agent/openai_agents/: __init__.py  models.py  runner.py  state.py  workflow.py
diagrid/agent/pydantic_ai/: __init__.py  models.py  runner.py  state.py  utils.py  version.py  workflow.py
diagrid/agent/strands/: README.md  README.rst  __init__.py  activities.py  durable_agent.py  executor.py  hooks.py  runner.py  state.py  workflow.py
diagrid/cli/: README.md  __init__.py  main.py  pyproject.toml
diagrid/cli/commands/: __init__.py  chaos.py  deploy.py  init.py
diagrid/cli/infra/: __init__.py  catalyst_operator.py  chaos.py  docker.py  helm.py  kind.py  kubectl.py
diagrid/cli/utils/: __init__.py  console.py  deps.py  process.py
diagrid/core/: README.md  __init__.py  pyproject.toml
diagrid/core/auth/: __init__.py  api_key.py  credentials.py  device_code.py  token.py
diagrid/core/catalyst/: __init__.py  appids.py  client.py  models.py  projects.py
diagrid/core/config/: __init__.py  constants.py  envs.py  user_config.py
tests/agent/: conftest.py
tests/agent/adk/: test_dapr_llm.py  test_models.py  test_state.py  test_workflow.py
tests/agent/core/: __init__.py  test_base_mapper.py  test_dapr_chat_client.py  test_dapr_chat_types.py  test_discovery.py  test_framework_mappers.py  test_introspection.py  test_langgraph_metadata.py  test_new_introspection.py  test_observability.py  test_pubsub.py  test_pydantic_ai_metadata.py  test_state_store.py  test_strands_mapper.py  test_strands_metadata.py  test_types.py  test_workflow_naming.py  test_workflow_runner.py
tests/agent/crewai/: test_dapr_llm.py  test_models.py  test_state.py  test_workflow.py
tests/agent/deepagents/: conftest.py  test_runner.py
tests/agent/langgraph/: __init__.py  test_models.py  test_state.py  test_workflow.py
tests/agent/openai_agents/: test_dapr_llm.py  test_models.py  test_state.py  test_workflow.py
tests/agent/pydantic_ai/: test_models.py  test_runner.py  test_state.py  test_workflow.py
tests/agent/strands_ext/: __init__.py  test_executor.py  test_workflow.py
tests/cli/: test_main.py
tests/cli/commands/: test_deploy.py  test_init.py
tests/cli/infra/: test_helm.py  test_kind.py
tests/cli/utils/: test_deps.py  test_deps_functional.py
tests/core/auth/: test_api_key.py  test_credentials.py  test_device_code.py
tests/core/catalyst/: test_client.py  test_projects.py
tests/core/config/: test_envs.py  test_user_config.py
tests/e2e/: conftest.py  test_adk_construction.py  test_chaos_resilience.py  test_core_dapr.py  test_crash_recovery.py  test_crewai_ollama.py  test_deepagents_ollama.py  test_langgraph_ollama.py  test_langgraph_retry.py  test_openai_agents_ollama.py  test_pydantic_ai_ollama.py  test_strands_ollama.py
(+31 files in other folders)
