[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diagrid"
version = "0.2.3"
description = "Diagrid namespace package"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dapr>=1.17.2",
    "dapr-ext-workflow>=1.17.2",
    "diagrid-cli>=0.1.0",
]

[project.scripts]
diagridpy = "diagrid.cli.main:cli"

[project.optional-dependencies]
agent-core = [
    "dapr-agents>=1.0.0rc2",
    "dapr-ext-langgraph>=1.17.2",
    "dapr-ext-strands>=1.17.2",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
    "langgraph>=0.3.6",
]
langgraph = [
    "langgraph>=1.0.8",
    "langchain-core>=0.3.0",
    "diagrid[agent-core]",
]
crewai = [
    "crewai>=1.6.1",
    "litellm>=1.0.0",
    "diagrid[agent-core]",
]
adk = [
    "google-adk>=1.0.0",
    "diagrid[agent-core]",
]
strands = [
    "openai>=2.21.0",
    "strands-agents>=1.26.0",
    "diagrid[agent-core]",
]
openai_agents = [
    "openai-agents>=0.1.0",
    "openai>=1.0.0",
    "diagrid[agent-core]",
]
pydantic_ai = [
    "pydantic-ai>=0.1.0",
    "diagrid[agent-core]",
]
all = [
    "diagrid[langgraph,crewai,adk,strands,openai_agents,pydantic_ai]",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2.0.0",
    "pip-tools>=7.4.1,<8.0.0",
    "cachetools>=6.1.0,<8.0.0",
    "flake8>=7.3.0",
    "ruff>=0.14.11",
    "pre-commit>=4.0.0,<5.0.0",
]
test = [
    "pytest>=7.0.0,<10.0.0",
    "pytest-cov>=4.0.0,<8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: marks tests requiring real network access or live infra (excluded from default run)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["diagrid*"]
exclude = [
    "diagrid.core*",
    "diagrid.cli*",
]

[tool.setuptools.package-data]
diagrid = ["py.typed"]

[tool.uv.workspace]
members = [
    "diagrid/core",
    "diagrid/cli",
]

[tool.uv.sources]
diagrid-core = { workspace = true }
diagrid-cli = { workspace = true }
