[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diagrid-cli"
version = "0.1.3"
description = "Diagrid CLI - Command-line interface for Diagrid Catalyst agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diagrid-core>=0.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[tool.setuptools]
packages = [
    "diagrid.cli",
    "diagrid.cli.commands",
    "diagrid.cli.infra",
    "diagrid.cli.utils",
]
package-dir = {"diagrid.cli" = "."}

[tool.setuptools.package-data]
"diagrid.cli" = ["py.typed"]
