[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dapr-ext-langgraph>=1.17.0rc3",
    "dapr-ext-strands>=1.17.0rc3",
    "pydantic>=2.12.5",
    "langgraph>=0.3.6",
]

[tool.setuptools.package-data]
core = ["py.typed"]