[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diagrid-agent-core"
version = "0.1.0"
description = "Diagrid Agent Core - Metadata and introspection for AI agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dapr>=1.17.0rc3",
    "dapr-agents>=0.10.6",
    "dapr-ext-langgraph>=1.17.0rc3",
    "dapr-ext-strands>=1.17.0rc3",
    "pydantic>=2.12.5",
    "langgraph>=0.3.6",
]

[tool.setuptools]
packages = [
    "diagrid.agent.core",
    "diagrid.agent.core.metadata",
    "diagrid.agent.core.metadata.mapping",
    "diagrid.agent.core.types",
    "diagrid.agent.core.scripts",
]
package-dir = {"diagrid.agent.core" = "."}

[tool.setuptools.package-data]
"diagrid.agent.core" = ["py.typed"]